--- a/ProjetoAcademia/ProjetoAcademia/Web.config
+++ b/ProjetoAcademia/ProjetoAcademia/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -6,8 +6,8 @@
 <configuration>
   <configSections>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-  </configSections>
+    
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
@@ -59,9 +59,15 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="AcademiaDadosContainer" connectionString="metadata=res://*/Models.AcademiaDados.csdl|res://*/Models.AcademiaDados.ssdl|res://*/Models.AcademiaDados.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=AcademiaDados;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="AcademiaDadosContainer1" connectionString="metadata=res://*/Models.BaseDados.csdl|res://*/Models.BaseDados.ssdl|res://*/Models.BaseDados.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=AcademiaDados;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="BaseDadosContainer" connectionString="metadata=res://*/Models.BaseDados.csdl|res://*/Models.BaseDados.ssdl|res://*/Models.BaseDados.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\mssqllocaldb;initial catalog=BancoAcademia;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="BaseDeDadosContainer" connectionString="metadata=res://*/Models.BaseDeDados.csdl|res://*/Models.BaseDeDados.ssdl|res://*/Models.BaseDeDados.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\mssqllocaldb;initial catalog=BasedeDados;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="AcademiaDadosContainer" connectionString="metadata=res://*/Models.AcademiaDados.csdl|res://*/Models.AcademiaDados.ssdl|res://*/Models.AcademiaDados.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=AcademiaDados;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+      providerName="System.Data.EntityClient" />
+    <add name="AcademiaDadosContainer1" connectionString="metadata=res://*/Models.BaseDados.csdl|res://*/Models.BaseDados.ssdl|res://*/Models.BaseDados.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=AcademiaDados;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;"
+      providerName="System.Data.EntityClient" />
+    <add name="BaseDadosContainer" connectionString="metadata=res://*/Models.BaseDados.csdl|res://*/Models.BaseDados.ssdl|res://*/Models.BaseDados.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\mssqllocaldb;initial catalog=BancoAcademia;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+      providerName="System.Data.EntityClient" />
+    <add name="BaseDeDadosContainer" connectionString="metadata=res://*/Models.BaseDeDados.csdl|res://*/Models.BaseDeDados.ssdl|res://*/Models.BaseDeDados.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\mssqllocaldb;initial catalog=BasedeDados;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+      providerName="System.Data.EntityClient" />
+    <add name="BasedeDadosConnectionString" connectionString="Data Source=(localdb)\mssqllocaldb;Initial Catalog=BasedeDados;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
