--- a/ProjetoAcademia/ProjetoAcademia/Web.config
+++ b/ProjetoAcademia/ProjetoAcademia/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -59,15 +59,10 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="AcademiaDadosContainer" connectionString="metadata=res://*/Models.AcademiaDados.csdl|res://*/Models.AcademiaDados.ssdl|res://*/Models.AcademiaDados.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=AcademiaDados;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
-      providerName="System.Data.EntityClient" />
-    <add name="AcademiaDadosContainer1" connectionString="metadata=res://*/Models.BaseDados.csdl|res://*/Models.BaseDados.ssdl|res://*/Models.BaseDados.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=AcademiaDados;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;"
-      providerName="System.Data.EntityClient" />
-    <add name="BaseDadosContainer" connectionString="metadata=res://*/Models.BaseDados.csdl|res://*/Models.BaseDados.ssdl|res://*/Models.BaseDados.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\mssqllocaldb;initial catalog=BancoAcademia;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
-      providerName="System.Data.EntityClient" />
-    <add name="BaseDeDadosContainer" connectionString="metadata=res://*/Models.BaseDeDados.csdl|res://*/Models.BaseDeDados.ssdl|res://*/Models.BaseDeDados.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\mssqllocaldb;initial catalog=BasedeDados;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
-      providerName="System.Data.EntityClient" />
-    <add name="BasedeDadosConnectionString" connectionString="Data Source=(localdb)\mssqllocaldb;Initial Catalog=BasedeDados;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework"
-      providerName="System.Data.SqlClient" />
+    <add name="AcademiaDadosContainer" connectionString="metadata=res://*/Models.AcademiaDados.csdl|res://*/Models.AcademiaDados.ssdl|res://*/Models.AcademiaDados.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=AcademiaDados;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="AcademiaDadosContainer1" connectionString="metadata=res://*/Models.BaseDados.csdl|res://*/Models.BaseDados.ssdl|res://*/Models.BaseDados.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=AcademiaDados;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="BaseDadosContainer" connectionString="metadata=res://*/Models.BaseDados.csdl|res://*/Models.BaseDados.ssdl|res://*/Models.BaseDados.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\mssqllocaldb;initial catalog=BancoAcademia;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="BaseDeDadosContainer" connectionString="metadata=res://*/Models.BaseDeDados.csdl|res://*/Models.BaseDeDados.ssdl|res://*/Models.BaseDeDados.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\mssqllocaldb;initial catalog=BasedeDados;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="BasedeDadosConnectionString" connectionString="Data Source=(localdb)\mssqllocaldb;Initial Catalog=BasedeDados;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
