Quase finalizado projeto

--- a/ProjetoFinal_MVC/ProjetoFinal_MVC/ProjetoFinal_MVC.csproj
+++ b/ProjetoFinal_MVC/ProjetoFinal_MVC/ProjetoFinal_MVC.csproj
@@ -175,6 +175,11 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201706261237059_Inicio.cs" />
+    <Compile Include="Migrations\201706261237059_Inicio.Designer.cs">
+      <DependentUpon>201706261237059_Inicio.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
@@ -263,6 +268,11 @@
       <Project>{49cd143f-a7d8-4230-9aa1-768b19079946}</Project>
       <Name>BaseModel</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201706261237059_Inicio.resx">
+      <DependentUpon>201706261237059_Inicio.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
